--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
-    "lint": "eslint .",
+    "linsdfsfsdft": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
